--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,8 @@
         <version>2.6.2</version>
     </parent>
 
+    <packaging>war</packaging>
+
     <dependencies>
 
         <dependency>
@@ -80,6 +82,27 @@
             <version>4.4.1</version>
         </dependency>
 
+        <!-- 打包成war包 -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-tomcat</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <scope>provided</scope>
+        </dependency>
+
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
