动态域名解析-前端页面

--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,7 @@
     </dependencies>
 
     <build>
+        <finalName>dnspod</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
